# diverse-structured-generation

./: .gitignore  LICENSE  README.md  pyproject.toml
minimal_dfa/: Cargo.toml  LICENSE  Makefile  pyproject.toml  setup.py
minimal_dfa/python/minimal_dfa/: __init__.py  minimal_dfa_rs.pyi
minimal_dfa/src/: diverse_guide_dfa.rs  error.rs  lib.rs  mindiv_dfa.rs  minimal_dfa.rs
minimal_dfa/src/python_bindings/: mod.rs
src/: diverse_guide.py  diverse_guide_rust.py  eval_runtime.py  generate_re.py  metrics_eval.py  perplexity.py  string_kernel.py
wd_kernel/: Makefile  wd_kernel.c
