[package]
name = "minimal_dfa"
version = "0.1.0"
edition = "2021"
description = "Construct a minimal DFA given a regex"
license = "MIT"
rust-version = "1.71.1"

[dependencies]
bincode = "2.0.1"
rayon = "1.10"
regex-automata = "0.4.9"
rustc-hash = "2.1.1"
thiserror = "2.0.12"
serde-pyobject = { version = "0.6.0", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }


[features]
python-bindings = ["pyo3", "serde-pyobject"]

[lib]
name = "minimal_dfa"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[package.metadata.scripts]
build-python-extension = "python setup.py build_rust --inplace --debug"
build-python-extension-release = "python setup.py build_rust --inplace --release"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
